[package]
name = "outlookUnlock"
version = "0.1.0"
edition = "2021"

[lib]
name = "unlockbridge"
crate-type = ["cdylib"]

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
rquest = { version = "2", features = ["cookies", "json"] }

reqwest = { version = "0.11", features = ["blocking", "json"] }

anyhow = "1"
chrono = "0.4.31"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
urlencoding = "2.1.3"
crossterm = "0.27"
log = "0.4"